--- a/app/src/main/res/drawable/ic_shuffle_on.xml
+++ b/app/src/main/res/drawable/ic_shuffle_on.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24.0" android:viewportWidth="24.0" android:width="24dp">
       
-    <path android:fillColor="@android:color/white" android:fillType="evenOdd" android:pathData="M21,1L3,1c-1.1,0 -2,0.9 -2,2v18c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2L23,3c0,-1.1 -0.9,-2 -2,-2zM10.59,9.17L5.41,4 4,5.41l5.17,5.17 1.42,-1.41zM14.5,4l2.04,2.04L4,18.59 5.41,20 17.96,7.46 20,9.5L20,4h-5.5zM14.83,13.41l-1.41,1.41 3.13,3.13L14.5,20L20,20v-5.5l-2.04,2.04 -3.13,-3.13z"/>
+    <path android:fillColor="@android:color/white" android:pathData="M21,1H3C1.9,1 1,1.9 1,3v18c0,1.1 0.9,2 2,2h18c1.1,0 2,-0.9 2,-2V3C23,1.9 22.1,1 21,1zM4.3,4.7c0.39,-0.39 1.02,-0.39 1.41,0l4.47,4.47l-1.42,1.4L4.3,6.11C3.91,5.72 3.91,5.09 4.3,4.7zM19.59,19.5c0,0.28 -0.22,0.5 -0.5,0.5H15.3c-0.45,0 -0.67,-0.54 -0.36,-0.85l1.2,-1.2l-3.13,-3.13l1.41,-1.41l3.13,3.14l1.19,-1.19c0.31,-0.32 0.85,-0.1 0.85,0.35V19.5zM19.59,8.29c0,0.45 -0.54,0.67 -0.85,0.36l-1.19,-1.19L5.7,19.29c-0.39,0.39 -1.02,0.39 -1.41,0c-0.39,-0.39 -0.39,-1.02 0,-1.41L16.13,6.04l-1.19,-1.19C14.63,4.54 14.85,4 15.3,4h3.79c0.28,0 0.5,0.22 0.5,0.5V8.29z"/>
     
 </vector>
