--- a/app/src/main/res/layout/item_artist.xml
+++ b/app/src/main/res/layout/item_artist.xml
@@ -24,12 +24,12 @@
             android:id="@+id/itemArt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?attr/bg_alt"
             android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/itemPrimary"
+        style="@style/Base.TextView.Primary"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -37,7 +37,6 @@
         android:gravity="bottom"
         android:singleLine="true"
         android:text="@string/lorem_ipsum"
-        android:textColor="?attr/fg"
         app:layout_constraintBottom_toTopOf="@+id/itemSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemArtHold"
@@ -50,7 +49,6 @@
         android:gravity="top"
         android:singleLine="true"
         android:text="@string/lorem_ipsum"
-        android:textColor="?attr/fg_alt"
         app:layout_constraintBottom_toBottomOf="@+id/itemArtHold"
         app:layout_constraintEnd_toEndOf="@+id/itemPrimary"
         app:layout_constraintStart_toStartOf="@+id/itemPrimary"
