--- a/app/src/main/res/layout/item_shimmer.xml
+++ b/app/src/main/res/layout/item_shimmer.xml
@@ -5,7 +5,7 @@
     android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
-    android:background="?attr/selector">
+    android:background="@drawable/selector">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/itemArtHold"
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:cardBackgroundColor="?attr/shimmer"
+        app:cardBackgroundColor="?attr/colorSurface"
         app:cardElevation="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="V,1:1"
@@ -28,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
-        android:background="?attr/shimmer"
+        android:background="?attr/colorSurface"
         android:elevation="2dp"
         app:layout_constraintBottom_toTopOf="@+id/itemSecondary"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
-        android:background="?attr/shimmer"
+        android:background="?attr/colorSurface"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/itemArtHold"
         app:layout_constraintEnd_toEndOf="@+id/itemPrimary"
