--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="list_item_height">56dp</dimen>
     <dimen name="media_bar_height">64dp</dimen>
-    <dimen name="search_bar_height">64dp</dimen>
+    <dimen name="search_header_height">96dp</dimen>
+    <dimen name="search_bar_height">48dp</dimen>
     <dimen name="time_bar_height">32dp</dimen>
 </resources>
