--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,34 +1,58 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Parent" parent="Theme.AppCompat.DayNight.NoActionBar">
-        <item name="accent">@color/accent</item>
-        <item name="colorPrimary">@color/accent</item>
-        <item name="colorSecondary">@color/accent</item>
-        <item name="selector">@drawable/selector</item>
+    <color name="live">#e53935</color>
+    <color name="onLive">#ffffff</color>
+    <color name="selector">#96717171</color>
 
-        <item name="android:statusBarColor">@color/accent</item>
-        <item name="android:navigationBarColor">?attr/bg_alt</item>
+    <style name="Base.Parent" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">#ff9800</item>
+        <item name="colorPrimaryVariant">?attr/colorPrimary</item>
+        <item name="colorOnPrimary">#000000</item>
+
+        <item name="colorSecondary">?attr/colorPrimary</item>
+        <item name="colorSecondaryVariant">?attr/colorPrimaryVariant</item>
+        <item name="colorOnSecondary">?attr/colorOnPrimary</item>
+
+        <item name="colorError">#f44336</item>
+        <item name="colorOnError">#ffffff</item>
+
+        <item name="android:navigationBarColor">?attr/colorSurface</item>
     </style>
 
     <style name="Base.Light" parent="Base.Parent">
-        <item name="accent_alt">@color/accent_alt_light</item>
-        <item name="bg">@color/bg_light</item>
-        <item name="bg_alt">@color/bg_alt_light</item>
-        <item name="fg">@color/fg_light</item>
-        <item name="fg_alt">@color/fg_alt_light</item>
-        <item name="shimmer">@color/shimmer_light</item>
+        <item name="colorSurface">#ffffff</item>
+        <item name="colorOnSurface">#000000</item>
+
+        <item name="android:colorBackground">#fafafa</item>
+        <item name="colorOnBackground">#212121</item>
 
         <item name="android:windowLightStatusBar" tools:targetApi="m">true</item>
         <item name="android:windowLightNavigationBar" tools:targetApi="O_MR1">true</item>
     </style>
 
     <style name="Base.Dark" parent="Base.Parent">
-        <item name="accent_alt">@color/accent_alt_dark</item>
-        <item name="bg">@color/bg_dark</item>
-        <item name="bg_alt">@color/bg_alt_dark</item>
-        <item name="fg">@color/fg_dark</item>
-        <item name="fg_alt">@color/fg_alt_dark</item>
-        <item name="shimmer">@color/shimmer_dark</item>
+        <item name="colorSurface">#121212</item>
+        <item name="colorOnSurface">#ffffff</item>
+
+        <item name="android:colorBackground">#000000</item>
+        <item name="colorOnBackground">#ffffff</item>
     </style>
 
     <style name="Base" parent="Base.Light" />
+
+    <style name="Base.Icon" parent="Base">
+        <item name="android:tint">?attr/colorOnSurface</item>
+    </style>
+
+    <style name="Base.Backing" parent="Base">
+        <item name="android:background">?attr/colorSurface</item>
+    </style>
+
+    <style name="Base.TextView.Primary" parent="Base">
+        <item name="android:textColor">?attr/colorOnSurface</item>
+    </style>
+
+    <style name="Base.Live" parent="Base">
+        <item name="android:background">@color/live</item>
+        <item name="colorOnSurface">@color/onLive</item>
+    </style>
 </resources>
