--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -25,7 +25,7 @@
 
         <LinearLayout
             android:id="@+id/mediaSheet"
-            style="@style/Base.Backing"
+            style="@style/Base.Background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="8dp"
@@ -35,6 +35,7 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/mediaBar"
+                style="@style/Base.Surface"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/media_bar_height"
                 app:layout_constraintBottom_toTopOf="@+id/navTabs"
