--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -172,8 +172,10 @@
             android:id="@+id/playingArtist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:gravity="center"
+            android:gravity="left|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             app:layout_constraintBottom_toTopOf="@+id/playingTime"
@@ -184,9 +186,11 @@
             android:id="@+id/playingTrack"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:ellipsize="marquee"
-            android:gravity="center"
+            android:gravity="left|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             android:textAppearance="?android:attr/textAppearanceLarge"
