Layout changes, queue clear button

--- a/app/src/main/res/layout/fragment_now_playing.xml
+++ b/app/src/main/res/layout/fragment_now_playing.xml
@@ -25,6 +25,7 @@
             android:layout_height="56dp"
             android:layout_marginBottom="24dp"
             android:background="?android:selectableItemBackgroundBorderless"
+            android:contentDescription="@string/play_pause"
             android:scaleType="fitCenter"
             app:cardCornerRadius="1024dp"
             app:cardElevation="0dp"
@@ -172,25 +173,23 @@
             android:id="@+id/playingArtist"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:gravity="left|center_vertical"
+            android:gravity="start|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             app:layout_constraintBottom_toTopOf="@+id/playingTime"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/playingTrack"
+            app:layout_constraintStart_toStartOf="@+id/playingTrack" />
 
         <TextView
             android:id="@+id/playingTrack"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:ellipsize="marquee"
-            android:gravity="left|center_vertical"
+            android:gravity="start|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             android:textAppearance="?android:attr/textAppearanceLarge"
