--- a/app/src/main/res/layout-land/fragment_now_playing.xml
+++ b/app/src/main/res/layout-land/fragment_now_playing.xml
@@ -176,12 +176,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:gravity="center"
+            android:gravity="start|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             app:layout_constraintBottom_toTopOf="@+id/playingTime"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/playingTrack"
+            app:layout_constraintStart_toStartOf="@+id/playingTrack" />
 
         <TextView
             android:id="@+id/playingTrack"
@@ -189,7 +189,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:ellipsize="marquee"
-            android:gravity="center"
+            android:gravity="start|center_vertical"
             android:singleLine="true"
             android:text="@string/lorem_ipsum"
             android:textAppearance="?android:attr/textAppearanceLarge"
