--- a/app/src/main/res/layout/item_generic.xml
+++ b/app/src/main/res/layout/item_generic.xml
@@ -63,7 +63,7 @@
         android:background="?android:selectableItemBackgroundBorderless"
         android:contentDescription="@string/drag_handle"
         android:padding="12dp"
-        android:scaleType="centerInside"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
