--- a/app/src/main/res/values/settings_keys.xml
+++ b/app/src/main/res/values/settings_keys.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="pref_volume_anim_key">pref_volume_anim</string>
+    <string name="pref_stream_quality_key">pref_stream_quality</string>
+    <string-array name="pref_stream_quality_values">
+        <item>quality</item>
+        <item>efficiency</item>
+    </string-array>
 </resources>
